sse4 implemntations of lsh were added

--- a/lsh/Makefile
+++ b/lsh/Makefile
@@ -1,10 +1,15 @@
 CC = gcc
-TARGET = lsh_test
+TARGET = lsh_test lsh_test_sse4
 
-.PHONY: clean
+.PHONY: all clean
 
-$(TARGET):
-	$(CC) *.c -o $@
+all: $(TARGET)
+
+lsh_test: lsh_test.c lsh256.c lsh512.c
+	$(CC) $^ -o $@
+
+lsh_test_sse4: lsh_test.c lsh256.sse4.c lsh512.sse4.c
+	$(CC) $^ -o $@ -msse4
 
 clean:
 	rm $(TARGET) -rf
