lookup table implementation of HIGHT was added

--- a/hight/Makefile
+++ b/hight/Makefile
@@ -1,11 +1,14 @@
 CC = gcc
 CFLAGS = -O2
 LDFLAGS = -lgomp
-TARGET = hight_ref
+TARGET = hight_ref hight
 
 .PHONY: all clean
 
 all : $(TARGET)
+
+hight: hight.c hight_test.c
+	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
 
 hight_ref: hight.ref.c hight_test.c
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
