Add lookup table implementation of ARIA block cipher

--- a/aria/Makefile
+++ b/aria/Makefile
@@ -1,6 +1,7 @@
 CC = gcc
 CFLAGS = -O2
-TARGET = aria
+LDFLAGS = -lgomp
+TARGET = aria arialut print_tables
 
 .PHONY: all clean
 
@@ -8,6 +9,12 @@ all : $(TARGET)
 
 aria: aria.c aria_sbox.c aria_test.c
 	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
+
+arialut: aria.lut.c aria_sbox.c aria_test.c
+	$(CC) $(CFLAGS) $^ -o $@ $(LDFLAGS)
+
+print_tables : print_tables.c aria_sbox.c
+	$(CC) $(CFLAGS) $^ -o $@
 
 clean:
 	rm $(TARGET) -rf
